Fixed YT display on mobile (again); removed template commented sections; modified DD and intro texts.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2977,11 +2977,8 @@ input, select, textarea {
 			.gallery iframe {
 				border-bottom: 0;
 				display: block;
-				margin: 1.25rem 0 0 1.25rem;
 				outline: 0;
 				position: relative;
-				height: 25vw;
-				min-height: 18rem;
 				object-fit: cover;
 				object-position: center;
 				width: 100%;
